# ws25_industrial_datascience_manuscript

./: .gitignore  1_introduction.qmd  5_references.html  CITATION.cff  README.md  _quarto.yml  index.html  index.qmd  introduction.qmd  pyproject.toml  references.bib  search.json
0_introduction/: 0_introduction.html  0_introduction.qmd  1_history.html  1_history.qmd  2_applications.html  2_applications.qmd  2_ds_in_industry.qmd
1_act1/: 0_0_predictive_maintenance.html  0_0_predictive_maintenance.qmd  1_self_study_session1.html  1_self_study_session1.qmd  2_self_study_session2.html  2_self_study_session2.qmd  3_self_study_session3.html  3_self_study_session3.qmd  4_self_study_session4.html  4_self_study_session4.qmd
2_act2/: 0_challenges.qmd  0_nature_of_timeseries.html  0_nature_of_timeseries.qmd  1_0_data_imputation.qmd  1_levels_of_system_integration.qmd  2_1_timeseries_decomposition.qmd  2_batch_vs_stream.qmd  3_0_process_optimization_sensor_data.qmd  3_1_timeseries_clustering.qmd  4_1_timeseries_classification.qmd  4_live_feedback.qmd  5_timeseries_regression.html  5_timeseries_regression.qmd  x_self_study_session1.html  x_self_study_session1.qmd  x_self_study_session2.html  x_self_study_session2.qmd
3_act3/: 0_challenges.html  0_challenges.qmd  0_index.qmd  0_nature_of_timeseries.qmd  1_0_data_imputation.qmd  1_1_timeseries_imputation_examples.ipynb  1_data_imputation.qmd  1_levels_of_system_integration.html  2_1_timeseries_decomposition.qmd  2_batch_vs_stream.html  2_time_series_decomposition.qmd  3_0_process_optimization_sensor_data.qmd  4_live_feedback.html  (+14 more)
(+26 files in other folders)
