[project]
name = "ws25_mci_industrial_ds_manuscript"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregor Ehrensperger", email = "g@ehrensperger.dev"},
]
dependencies = ["quarto-cli>=1.7.33", "matplotlib>=3.10.5", "numpy>=2.3.2", "pandas>=2.3.1", "seaborn>=0.13.2", "scikit-learn>=1.7.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "-"}


[tool.pdm]
distribution = false
